# VENI-VINDy-VICI

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
doc/documentation/html/: .buildinfo  contact.html  genindex.html  modules.html  objects.inv  py-modindex.html  vindy.layers.html  vindy.libraries.html  vindy.networks.html
doc/documentation/html/_modules/: index.html
doc/documentation/html/_modules/vindy/callbacks/: pdf_threshold_callback.html  save_coefficients_callback.html  spotify_callback.html  threshold_prune_callback.html
doc/documentation/html/_modules/vindy/libraries/: base_library.html  exponential_library.html  force_library.html  fourier_library.html
doc/documentation/html/_modules/vindy/networks/: autoencoder_sindy.html  base_model.html  sindy_network.html  variational_autoencoder_sindy.html
doc/documentation/html/_modules/vindy/utils/: utils.html
doc/documentation/html/_sources/: contact.rst.txt
doc/documentation/source/: conf.py  index.rst  vindy.libraries.rst  vindy.networks.rst  vindy.utils.rst
docs/: .buildinfo  contact.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  vindy.callbacks.html  vindy.distributions.html  vindy.html  vindy.layers.html  vindy.libraries.html  vindy.networks.html  vindy.utils.html
docs/_modules/: index.html
docs/_modules/vindy/callbacks/: pdf_threshold_callback.html  save_coefficients_callback.html  sindy_callback.html  spotify_callback.html  threshold_prune_callback.html
docs/_modules/vindy/distributions/: base_distribution.html  gaussian.html  laplace.html
docs/_modules/vindy/layers/: sindy_layer.html  vindy_layer.html
docs/_modules/vindy/libraries/: base_library.html  exponential_library.html  force_library.html  fourier_library.html  polynomial_library.html
docs/_modules/vindy/networks/: autoencoder_sindy.html  base_model.html  sindy_network.html  variational_autoencoder_sindy.html
docs/_modules/vindy/utils/: utils.html
docs/_sources/: modules.rst.txt  vindy.distributions.rst.txt  vindy.rst.txt
docs/documentation/source/: conf.py  vindy.callbacks.rst  vindy.layers.rst  vindy.libraries.rst  vindy.networks.rst  vindy.rst  vindy.utils.rst
examples/Roessler/: Roessler.ipynb  Roessler_utils.py
vindy/: __init__.py
vindy/callbacks/: __init__.py  pdf_threshold_callback.py  save_coefficients_callback.py  sindy_callback.py  spotify_callback.py  threshold_prune_callback.py
vindy/distributions/: __init__.py  base_distribution.py  gaussian.py  laplace.py
vindy/layers/: __init__.py  sindy_layer.py  vindy_layer.py
vindy/layers/distributions/: gaussian.py  laplace.py
vindy/libraries/: __init__.py  base_library.py  exponential_library.py  force_library.py  fourier_library.py  polynomial_library.py
vindy/networks/: __init__.py  autoencoder_sindy.py  base_model.py  sindy_network.py  variational_autoencoder_sindy.py
vindy/utils/: __init__.py  utils.py
